<resources>
    <string name="app_name">Miser Plus</string>
    <string name="action_rateApp">Rate app</string>
    <string name="action_info">Help</string>
    <string name="action_settings">Settings</string>
    <string name="category_name_general">General</string>
    <string name="category_name_categories_quantity">Number of categories</string>
    <string name="category_name_categories_name">Category names</string>
    <string name="edit_category_hint">New name</string>
    <string name="prefscreen_income_key" translatable="false">screen_income</string>
    <string name="prefscreen_cost_key" translatable="false">screen_cost</string>
    <string name="prefscreen_account_key" translatable="false">screen_account</string>
    <string name="pref_currency_label">Currency</string>
    <string name="pref_currency_key" translatable="false">currency</string>
    <string name="pref_currency_default_RUB_label" translatable="false">RUB</string>
    <string name="pref_currency_default_RUB_value" translatable="false">RUB</string>
    <string name="pref_language_label">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_RUS_label" translatable="false">RUS</string>
    <string name="pref_language_SYS_label" translatable="true">System</string>
    <string name="pref_language_RUS_value" translatable="false">rus</string>
    <string name="pref_language_SYS_value" translatable="false">sys</string>
    <string name="pref_income_quantity_key" translatable="false">income_quantity</string>
    <string name="title_income">Incomes</string>
    <string name="pref_income_quantity_2_label" translatable="false">2</string>
    <string name="pref_income_quantity_4_label" translatable="false">4</string>
    <string name="pref_income_quantity_6_label" translatable="false">6</string>
    <string name="pref_income_quantity_8_label" translatable="false">8</string>
    <string name="pref_income_quantity_2_value" translatable="false">2</string>
    <string name="pref_income_quantity_4_value" translatable="false">4</string>
    <string name="pref_income_quantity_6_value" translatable="false">6</string>
    <string name="pref_income_quantity_8_value" translatable="false">8</string>
    <string name="pref_cost_quantity_key" translatable="false">cost_quantity</string>
    <string name="title_cost">Expenses</string>
    <string name="pref_cost_quantity_2_label" translatable="false">2</string>
    <string name="pref_cost_quantity_4_label" translatable="false">4</string>
    <string name="pref_cost_quantity_6_label" translatable="false">6</string>
    <string name="pref_cost_quantity_8_label" translatable="false">8</string>
    <string name="pref_cost_quantity_10_label" translatable="false">10</string>
    <string name="pref_cost_quantity_12_label" translatable="false">12</string>
    <string name="pref_cost_quantity_14_label" translatable="false">14</string>
    <string name="pref_cost_quantity_16_label" translatable="false">16</string>
    <string name="pref_cost_quantity_2_value" translatable="false">2</string>
    <string name="pref_cost_quantity_4_value" translatable="false">4</string>
    <string name="pref_cost_quantity_6_value" translatable="false">6</string>
    <string name="pref_cost_quantity_8_value" translatable="false">8</string>
    <string name="pref_cost_quantity_10_value" translatable="false">10</string>
    <string name="pref_cost_quantity_12_value" translatable="false">12</string>
    <string name="pref_cost_quantity_14_value" translatable="false">14</string>
    <string name="pref_cost_quantity_16_value" translatable="false">16</string>
    <string name="pref_account_quantity_key" translatable="false">account_quantity</string>
    <string name="title_account">Accounts</string>
    <string name="pref_account_quantity_4_value" translatable="false">4</string>
    <string name="pref_start_date_calendar_key" translatable="false">start</string>
    <string name="pref_final_date_calendar_key" translatable="false">final</string>
    <string name="pref_week_key" translatable="false">week</string>
    <string name="pref_week_monday_value" translatable="false">2</string>
    <string name="pref_week_sunday_value" translatable="false">1</string>
    <string name="pref_week_default_value" translatable="false">2</string>
    <string name="pref_week_monday_label">Monday</string>
    <string name="pref_week_sunday_label">Sunday</string>
    <string name="pref_week_label">First day of week</string>
    <string name="disable_adMob_key" translatable="false">disable</string>
    <string name="info_disable_ads">Purchase for disabling ads done</string>
    <string name="info_error_ads_disabling">Error, try again later </string>
    <string name="pref_time_to_rate_key" translatable="false">time</string>
    <string name="pref_isRate_key" translatable="false">rate</string>
    <string name="pref_isNotification_key" translatable="false">notification</string>
    <string name="pref_notification_key" translatable="false">notify_key</string>
    <string name="pref_notification_label" translatable="true">Notification</string>
    <string-array name="income_category">
        <item>Salary</item>
        <item>Advance</item>
        <item>Business</item>
        <item>Other</item>
        <item>Other1</item>
        <item>Other2</item>
        <item>Other3</item>
        <item>Other4</item>
    </string-array>
    <string-array name="cost_category">
        <item>Food</item>
        <item>Housing</item>
        <item>Public transport</item>
        <item>Sport</item>
        <item>Car</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Goods </item>
        <item>Medicine</item>
        <item>Gifts</item>
        <item>Credit</item>
        <item>Mobile</item>
        <item>Clothing</item>
        <item>Other</item>
        <item>Other1</item>
        <item>Other2</item>
    </string-array>
    <string-array name="accounts">
        <item>Cash</item>
        <item>Credit card</item>
        <item>Bank account</item>
        <item>Deposit</item>
        <item>Other</item>
        <item>Other1</item>
    </string-array>
    <string name="radio_button_week">Week</string>
    <string name="radio_button_month">Month</string>
    <string name="radio_button_day">Day</string>
    <string name="radio_button_set">Set</string>
    <string name="title_add_card">Transaction</string>
    <string name="title_add_card_budget">Budget item</string>
    <string name="Insert_OK">The transaction has been added</string>
    <string name="Insert_Budget_OK">The budget line has been added</string>
    <string name="db_error">The database error</string>
    <string name="no_comments">no comments</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="account_hint">New amount</string>
    <string name="transfer_enable">Transfer from the account</string>
    <string name="dashboard">Dashboard</string>
    <string name="market_error">Could not open Android market, please check if the market app installed
        or not. Try again later</string>
    <string name="comment">Comments</string>
    <string name="summ">Amount</string>
    <string name="summ_transfer">Amount of the transfer</string>
    <string name="emptyView">Transactions for the selected period was not found</string>
    <string name="range_select">Select a period</string>
    <string name="Create">Creating</string>
    <string name="edit_title">Editing</string>
    <string name="remove_action">Removed!</string>
    <string name="undo_action">Undo?</string>
    <string name="type_cost">Expenses</string>
    <string name="type_income">Incomes</string>
    <string name="change_language">Changes will take effect after the application is restarted</string>
    <string name="title_language_dialog">Switch language</string>
    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_may">May</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Aug</string>
    <string name="month_sep">Sep</string>
    <string name="month_oct">Oct</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Dec</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may_">May</string>
    <string name="month_jun_">Jun</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="income_12">Incomes by month</string>
    <string name="expenses_12">Expenses by month</string>
    <string name="disable_ads">Disable ads</string>
    <string name="rate_app_text">Please, rate our app!</string>
    <string name="no_data_graph">No values!</string>
    <string name="main_notification_channel">Miser reminder</string>
    <string name="addExpenses_notification_title">Miser reminder</string>
    <string name="addExpenses_notification_main_text">Time to add costs</string>
    <string name="budgeting">Budget: dashboard</string>
    <string name="budgeting_cat_cost">Budget: expenses</string>
    <string name="budgeting_cat_income">Budget: incomes</string>
    <string name="balance">Incomes/Expenses</string>
    <string name="year_to_date_budget">Year-to-date budget</string>
    <string name="year_to_date_budget_perform">Year-to-date budget perform</string>
    <string name="budget_this_month">Only this month</string>
    <string name="budget_each_month">Repeat every month</string>
    <string name="budget_left_to_spend">Left to spend</string>
    <string name="budget_left_to_earn">Left to earn</string>
    <string name="monthly_budget">Budget monthly perform</string>
    <string name="na">n/a</string>
    <string name="emptyView_budget">Budget items not found</string>
    <string-array name="questions">
        <item>How to begin?</item>
        <item>How to change the number of categories?</item>
        <item>How to rename categories?</item>
        <item>How to change the currency designation?</item>
        <item>How to change the amount of an account?</item>
        <item>How to transfer money between accounts?</item>
        <item>How to add a transaction?</item>
        <item>How to edit a transaction?</item>
        <item>How to delete a transaction?</item>
    </string-array>
</resources>