<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingTop="16dp"
    android:paddingRight="8dp"
    android:paddingBottom="24dp"
    app:layout_scrollFlags="scroll">

    <RadioButton
        android:id="@+id/set_radioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/radio_button_set"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite"
        android:theme="@style/RadioButtonStyle" />

    <RadioButton
        android:id="@+id/day_radioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/radio_button_day"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite"
        android:theme="@style/RadioButtonStyle" />

    <RadioButton
        android:id="@+id/week_radioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/radio_button_week"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite"
        android:theme="@style/RadioButtonStyle" />

    <RadioButton
        android:id="@+id/month_radioButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/radio_button_month"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite"
        android:theme="@style/RadioButtonStyle" />

</RadioGroup>